tests/valid/definite/ListAccess_Valid_3.whiley
void f([int] x):
     print str(|x|)

void System::main([string] args):
     arr = [[1,2,3]]
     f(arr[0])
