tests/invalid/simple/ListSublist_CompileFail_3.whiley
void System::main([string] args):
    [int] list = [1,2,3]
    [int] sublist = list[2:0]
    print str(list)
    print str(sublist)
